# lidar-evaluations

./: .clangd  .envrc  .gitignore  .gitmodules  CMakeLists.txt  README.md  justfile  pyproject.toml
cpp/: bindings.cpp  helpers.cpp  helpers.h  types.cpp  types.h  types_bindings.h
cpp/features/: features-inl.h  features.cpp  features.h  mask.cpp  mask.h
experiments/: curvature.py  dewarp.py  env.py  features.py  gen_cv_init.py  generate_imu_bias.py  init.py  plane_plane.py  pseudo.py  window.py
features/: types.py
features/datasets/: __init__.py  base.py  enwide.py  newer_college_2020.py  newer_college_2021.py
src/: convert.py  env.py  experiment_curvature.py  experiment_dewarp.py  experiment_pseudo.py  figure_ae copy.py  figure_ae.py  figure_curvature.py  figure_dewarp.py  figure_pseudo.py  figure_pseudo_init.py  figure_window.py  generate_imu_bias.py  gt.py  iterate.py  iterate_test_datasets.py  params.py  run.py  run_init.py  stats.py  test.py  test_compute_normals.py  test_curvature.py  test_cv_results.py  test_edge_projection.py  test_eigenvalues.py  test_helipr_planar.py  test_hilti_planar.py  test_lidar_loading.py  test_old_new.py  test_planar_max.py  test_stamps.py  test_vis_curvature.py  wrappers.py
src/lidar_eval/: convert.py  imu_bias.py  params.py  run.py  run_init.py  stats.py  wrappers.py
