[project]
name = "lidar-features"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["evalio", "loam", "tqdm>=4.67.1"]

[tool.uv.sources]
evalio = { workspace = true }
loam = { workspace = true }

[tool.uv.workspace]
members = ["evalio", "loam"]

[dependency-groups]
dev = [
    "pybind11-stubgen>=2.5.1",
]
